--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn.vectorstock.com/i/500p/21/16/graduation-cap-and-books-vector-32116.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StudySync</title>
   </head>
